apps/media/filebrowser/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  type: LoadBalancer
  loadBalancerSourceRanges:
    - "192.168.1.0/24"
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: filebrowser
